--- a/index.html
+++ b/index.html
@@ -29,117 +29,47 @@
       flex-wrap: wrap;
     }
     [card] {
-      background: url('assets/lightpaperfibers.png');
-      display: inline-block;
-      vertical-align: top;
+      background-position: center center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      display: flex;
+      flex-direction: column;
       position: relative;
       overflow: hidden;
       margin: 8px 40px 16px 0;
       box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
       color: #272727;
       border-radius: 4px;
-      min-width: 325px;
-      max-width: 325px;
+      height: 325px;
+      width: 325px;
     }
     [card]:last-child {
       margin-right: 0;
     }
     [card] .title {
+      align-self: center;
       background-color: rgba(0, 0, 0, .5);
+      color: #FFF;
       line-height: 20px;
       font-size: 20px;
       font-weight: 300;
-    }
-    [card] .content {
-      padding: 20px;
-      font-weight: 300;
-      border-radius: 0 0 4px 4px;
-    }
-    [card] p {
-      margin: 0;
-    }
-    [card] .image {
-      position: relative;
-      height: 175px;
-      overflow: hidden;
-    }
-    [card] .image img {
-      border-radius: 4px 4px 0 0;
-      position: relative;
-      left: 0;
-      right: 0;
-      top: 0;
-      bottom: 0;
-      width: 100%;
-    }
-    [card] .image .title {
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
+      margin-bottom: auto;
+      margin-top: auto;
       padding: 16px;
-      color: #FFF;
+      text-align: center;
+      width: 80%;
     }
     [card].back {
       background: url('assets/onion-pattern.jpg');
       background-size: cover;
-    }
-    [card] .row {
-      border-bottom: 1px solid lightgray;
-      -webkit-display: flex;
-      -moz-display: flex;
-      display: flex;
-      margin-bottom: .75em;
-      padding-bottom: .75em;
-    }
-    [card] .row:last-child {
-      border-bottom: 0;
-      margin-bottom: 0;
-      padding-bottom: 0;
-    }
-    [card] .row div {
-      margin: auto;
-      width: 50%;
-    }
-    [card] .row div:last-child {
-      text-align: right;
     }
   </style>
 </head>
 <body ng-controller="CardControl">
 
 <div class="card-wrapper">
-  <div card ng-repeat="card in cards">
-    <div class="image">
-      <img src="images/{{card.image}}.jpg">
-      <span class="title">{{card.title}}</span>
-    </div>
-    <div class="content">
-      <div class="row">
-        <div>{{card.smell}}</div>
-        <div>{{card.smell_value}}</div>
-      </div>
-      <div class="row">
-        <div>{{card.cry}}</div>
-        <div>{{card.cry_value}}</div>
-      </div>
-      <div class="row">
-        <div>{{card.rings}}</div>
-        <div>{{card.rings_value}}</div>
-      </div>
-      <div class="row">
-        <div>{{card.flower}}</div>
-        <div>{{card.flower_value}}</div>
-      </div>
-      <div class="row">
-        <div>{{card.length}}</div>
-        <div>{{card.length_value}}</div>
-      </div>
-      <div class="row">
-        <div>{{card.popularity}}</div>
-        <div>{{card.popularity_value}}</div>
-      </div>
-    </div>
+  <div card ng-repeat="card in cards" style="background-image: url(images/{{card.image}}.jpg)">
+    <div class="title">{{card.title}}</div>
   </div>
   <div card class="back">
   </div>
