--- a/index.html
+++ b/index.html
@@ -40,40 +40,45 @@
       box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
       color: #272727;
       border-radius: 4px;
-      height: 325px;
-      width: 325px;
+      height: 1000px;
+      width: 1000px;
     }
     [card]:last-child {
       margin-right: 0;
     }
-    [card] .year {
-      background-color: dodgerblue;
-      border-radius: 4px 4px 0 0;
-      color: #fff;
-      font-size: 20px;
-      font-weight: 600;
-      margin-top: auto;
-      width: 40%;
-    }
     [card] .title {
-      background-color: sandybrown;
+      background
+      background-color: sienna;
       border-radius: 4px;
       color: #fff;
-      font-size: 16px;
-      margin-bottom: auto;
+      font-size: 250%;
+      margin-top: auto;
       width: 80%;
+    }
+    [card] .title.no-year {
+      margin-bottom: auto;
+    }
+    [card] .year-wrapper {
+      margin-bottom: auto;
+      width: 40%;
+    }
+    [card] .year {
+      background-color: dodgerblue;
+      border-radius: 0 0 4px 4px;
+      color: #fff;
+      font-size: 250%;
+      font-weight: 600;
     }
     [card] .title,
     [card] .year {
-      align-self: center;
-      flex-grow: 0;
-      line-height: 20px;
-      padding: 16px;
+      padding: 2%;
       text-align: center;
     }
-    [card].back {
-      background: url('assets/onion-pattern.jpg');
-      background-size: cover;
+
+    [card] .title,
+    [card] .year-wrapper {
+      align-self: center;
+      flex-grow: 0;
     }
   </style>
 </head>
@@ -81,10 +86,13 @@
 
 <div class="card-wrapper">
   <div card ng-repeat="card in cards" style="background-image: url(images/{{card.image}})">
-    <div class="year">{{card.year}}</div>
-    <div class="title">{{card.title}}</div>
+    <div class="title no-year">{{card.title}}</div>
   </div>
-  <div card class="back">
+  <div card ng-repeat="card in cards" style="background-image: url(images/{{card.image}})">
+    <div class="title">{{card.title}}</div>
+    <div class="year-wrapper" ng-if="card.year">
+      <div class="year">{{card.year}}</div>
+    </div>
   </div>
 </div>
 
