--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     html,body {
       font-family: 'Roboto', sans-serif;
-      background: #FAFAFA;
+      background: #fff;
       height: 100%;
       width: 100%;
       padding: 20px;
@@ -39,9 +39,18 @@
       margin: 8px 40px 16px 0;
       box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
       color: #272727;
-      border-radius: 4px;
+      border-radius: 10px;
       height: 1000px;
       width: 1000px;
+    }
+    @media print {
+      .card-wrapper {
+        display: block;
+      }
+      [card]:nth-of-type(2n+2) {
+        page-break-after: always;
+        page-break-inside: avoid;
+      }
     }
     [card]:last-child {
       margin-right: 0;
@@ -84,7 +93,7 @@
 <body ng-controller="CardControl">
 
 <div class="card-wrapper">
-  <div card ng-repeat="card in cards" style="background-image: url(images/{{card.image}})">
+  <div card class="card" ng-repeat="card in cards" style="background-image: url(images/{{card.image}})">
     <div class="title no-year">{{card.title}}</div>
   </div>
   <div card ng-repeat="card in cards" style="background-image: url(images/{{card.image}})">
