--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       background: #fff;
       height: 100%;
       width: 100%;
-      padding: 20px;
+      padding: 0;
       margin: 0;
       color: #5A5A62;
       -webkit-font-smoothing: antialiased;
@@ -27,6 +27,7 @@
       display: flex;
       -webkit-flex-wrap: wrap;
       flex-wrap: wrap;
+      min-height: 100%;
     }
     [card] {
       background-position: center center;
@@ -36,30 +37,21 @@
       flex-direction: column;
       position: relative;
       overflow: hidden;
-      margin: 8px 40px 16px 0;
+      border: 1px solid darkgray;
       box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
       color: #272727;
       border-radius: 10px;
-      height: 1000px;
-      width: 1000px;
-    }
-    @media print {
-      .card-wrapper {
-        display: block;
-      }
-      [card]:nth-of-type(2n+2) {
-        page-break-after: always;
-        page-break-inside: avoid;
-      }
+      min-height: 200px;
+      width: 20%;
     }
     [card]:last-child {
       margin-right: 0;
     }
     [card] .title {
       background-color: sienna;
-      border-radius: 4px;
+      border-radius: 10px;
       color: #fff;
-      font-size: 250%;
+      font-size: 100%;
       margin-top: auto;
       width: 80%;
     }
@@ -72,9 +64,9 @@
     }
     [card] .year {
       background-color: dodgerblue;
-      border-radius: 0 0 4px 4px;
+      border-radius: 0 0 10px 10px;
       color: #fff;
-      font-size: 250%;
+      font-size: 100%;
       font-weight: 600;
     }
     [card] .title,
@@ -87,6 +79,29 @@
     [card] .year-wrapper {
       align-self: center;
       flex-grow: 0;
+    }
+    @media print {
+      .card-wrapper {
+        display: block;
+      }
+      [card] {
+        min-height: 1000px;
+        width: 80%;
+      }
+      [card]:nth-of-type(2n+2) {
+        page-break-after: always;
+        page-break-inside: avoid;
+      }
+      [card] .title,
+      [card] .year {
+        font-size: 250%;
+      }
+      [card] .title {
+        border-radius: 20px;
+      }
+      [card] .year {
+        border-radius: 0 0 20px 20px;
+      }
     }
   </style>
 </head>
